@@ -6520,6 +6520,25 @@ condition|)
 block|{
 try|try
 block|{
+name|int
+name|numberToKeep
+init|=
+name|numberBackupsToKeep
+decl_stmt|;
+if|if
+condition|(
+name|numberToKeep
+operator|<
+literal|1
+condition|)
+block|{
+name|numberToKeep
+operator|=
+name|Integer
+operator|.
+name|MAX_VALUE
+expr_stmt|;
+block|}
 name|SnapShooter
 name|snapShooter
 init|=
@@ -6536,6 +6555,8 @@ operator|.
 name|createSnapAsync
 argument_list|(
 name|currentCommitPoint
+argument_list|,
+name|numberToKeep
 argument_list|,
 name|ReplicationHandler
 operator|.
