@@ -4557,12 +4557,6 @@ name|addNumberToKeepInRequest
 operator|=
 literal|false
 expr_stmt|;
-name|backupKeepParamName
-operator|=
-name|ReplicationHandler
-operator|.
-name|NUMBER_BACKUPS_TO_KEEP_INIT_PARAM
-expr_stmt|;
 block|}
 name|masterJetty
 operator|.
@@ -5019,6 +5013,33 @@ block|{
 name|BackupThread
 name|backupThread
 init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|addNumberToKeepInRequest
+condition|)
+block|{
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|masterClient
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|backupThread
+operator|=
 operator|new
 name|BackupThread
 argument_list|(
@@ -5026,12 +5047,14 @@ name|addNumberToKeepInRequest
 argument_list|,
 name|backupKeepParamName
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|backupThread
 operator|.
 name|start
 argument_list|()
 expr_stmt|;
+block|}
+block|}
 name|File
 name|dataDir
 init|=
@@ -5146,6 +5169,10 @@ expr_stmt|;
 block|}
 if|if
 condition|(
+name|backupThread
+operator|!=
+literal|null
+operator|&&
 name|backupThread
 operator|.
 name|fail
